# scratch_study

./: .gitignore  .pre-commit-config.yaml  README.md  Tensor_study.ipynb  main.py  main_pl.py  pyproject.toml  requirements.txt  rnn.py  rnn_test.py  test.ipynb  test_dictionary.ipynb  test_dictionary.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: seq2seq.yaml
configs/trainer/: default.yaml
core/: base.py  train.py
data/sample/: valid.csv  valid_en  valid_ko
nlp/datasets/: data_helper.py
nlp/model/: base.py  gru.py  lstm.py  rnn.py  seq2seq.py  transformer.py
nlp/utils/: bleu_score.py  metrics.py  utils.py
src/models/: attention.py  transformer.py
src_pl/: data_helper.py  train_pi.py
test/: pyproject.toml
