[tool.poetry]
name = "scratch-study"
version = "0.1.0"
description = ""
authors = ["lee seungchae <steve.aitok@gmail.com>"]
readme = "README.md"
packages = [{include = "scratch_study"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
wandb = "^0.15.2"
mypy = "^1.2.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
sentencepiece = "^0.1.99"
torch = "1.13.1"
pre-commit = "^3.3.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
